--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
